# learn-rust

./: Cargo.toml  docker-compose.yaml
common/: Cargo.toml
common/src/: lib.rs  models.rs  util.rs
domain/: Cargo.toml
services/users/: Cargo.toml
services/users/migrations/2022-06-07-045645_add_users/: up.sql
services/users/src/: db.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
services/users/src/handlers/: mod.rs  models.rs
