[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features=["derive"]}
serde_derive = "1.0.137"
