[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.17"
common = { path = "../../common" }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "uuid", "r2d2", "chrono"] }
r2d2 = "0.8.9"
serde = { version = "1.0.137", features=["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
bcrypt = "0.13.0"
derive_more = "0.99.17"
rust-argon2 = "1.0.0"
# domain = { path = "../../domain" }